--- a/MobileWorld/Views/Home/Index.cshtml
+++ b/MobileWorld/Views/Home/Index.cshtml
@@ -184,7 +184,8 @@
             </div>
         </div>
     </div>
-</div> <!-- End main content area -->
+</div>
+<!-- End main content area -->
 
 <div class="brands-area">
     <div class="zigzag-bottom"></div>
