Add Login By Facebook

--- a/MobileWorld/Areas/Admin/Views/Bill/Index.cshtml
+++ b/MobileWorld/Areas/Admin/Views/Bill/Index.cshtml
@@ -19,7 +19,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="fa-pull-right">
-                            <input type="text" class="form-control" id="txtSeach" name="seachUser" placeholder="Tìm kiếm" />
+                            <input type="text" class="form-control" id="txtSeach" name="seachUser" placeholder="Nhập tài khoản" />
                         </div>
                     </div>
                     <div class="col-md-2">
