--- a/MobileWorld/Assets/web/css/style.css
+++ b/MobileWorld/Assets/web/css/style.css
@@ -924,13 +924,25 @@ input[type="text"], input[type="password"], input[type="email"], textarea {
     padding: 10px;
 }
 
-input[type="submit"], button[type=submit] {
+.btnCart {
     background: none repeat scroll 0 0 #5a88ca;
     border: medium none;
     color: #fff;
     padding: 11px 20px;
     text-transform: uppercase;
 }
+
+    .btnCart:hover {
+        background-color: #222
+    }
+
+    input[type="submit"], button[type=submit] {
+        background: none repeat scroll 0 0 #5a88ca;
+        border: medium none;
+        color: #fff;
+        padding: 11px 20px;
+        text-transform: uppercase;
+    }
 
     input[type="submit"]:hover, button[type=submit]:hover {
         background-color: #222
@@ -1363,13 +1375,16 @@ a.about_paypal {
 
 table.shop_table td.product-remove a {
     display: inline-block;
-    padding: 0 5px 2px;
+    padding: 0 5px;
     text-transform: uppercase;
+    border: none;
+    background-color: #5a88ca;
+    color: #fff;
+    cursor: pointer;
 }
 
 
     table.shop_table td.product-remove a:hover {
-        color: #fff;
         background: red;
         text-decoration: none
     }
