--- a/MobileWorld/Areas/Admin/Views/Shared/_LeftMenu.cshtml
+++ b/MobileWorld/Areas/Admin/Views/Shared/_LeftMenu.cshtml
@@ -1,6 +1,6 @@
 ﻿<ul class="sidebar navbar-nav">
     <li class="nav-item active">
-        <a class="nav-link" href="index.html">
+        <a class="nav-link" href="/Admin">
             <i class="fas fa-home"></i>
             <span>Trang chủ</span>
         </a>
