--- a/MobileWorld/Views/Login/Forgot.cshtml
+++ b/MobileWorld/Views/Login/Forgot.cshtml
@@ -6,7 +6,7 @@
 
 <div class="loginBox">
     <img src="/Assets/login/user.png" class="user">
-    <h2>Đăng nhập</h2>
+    <h2>Xác thực</h2>
     <form id="formData">
         <p>Tài khoản</p>
         <input id="txtUsername" type="text" name="username" placeholder="Nhập tài khoản">
