--- a/MobileWorld/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/MobileWorld/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -112,7 +112,7 @@
         <div id="content-wrapper">
             <div class="container-fluid">
                 <!-- Page Content -->
-                <h2>@RenderSection("header", required: false)</h2>
+                <h3>@RenderSection("header", required: false)</h3>
                 <hr>
                 @RenderBody()
             </div>
@@ -122,7 +122,7 @@
         <footer class="sticky-footer">
             <div class="container my-auto">
                 <div class="copyright text-center my-auto">
-                    <span>Copyright © Your Website 2019</span>
+                    <span>MobileWorld © 2020</span>
                 </div>
             </div>
         </footer>
