--- a/MobileWorld/Areas/Admin/Views/Bill/Index.cshtml
+++ b/MobileWorld/Areas/Admin/Views/Bill/Index.cshtml
@@ -15,6 +15,7 @@
                 <div class="row">
                     <div class="col-lg-4">
                         <i class="fas fa-table"></i>
+                        <b id="total"></b>
                     </div>
                     <div class="col-lg-4">
                         <div class="fa-pull-right">
@@ -134,6 +135,6 @@
 
 @section ClientScript
 {
-    <script src="/Assets/admin/controller/billController1.js"></script>
+    <script src="/Assets/admin/controller/billController.js"></script>
 }
 
