--- a/MobileWorld/Areas/Admin/Views/Catalog/Index.cshtml
+++ b/MobileWorld/Areas/Admin/Views/Catalog/Index.cshtml
@@ -14,6 +14,7 @@
                 <div class="row">
                     <div class="col-lg-4">
                         <i class="fas fa-table"></i>
+                        <b id="total"></b>
                     </div>
                     <div class="col-lg-4">
                         <div class="fa-pull-right">
@@ -278,7 +279,7 @@
 
 @section ClientScript
 {
-    <script src="/Assets/admin/controller/catalogController.js"></script>
+    <script src="/Assets/admin/controller/catalogController1.js"></script>
 }
 
 
