--- a/MobileWorld/Areas/Admin/Views/History/Index.cshtml
+++ b/MobileWorld/Areas/Admin/Views/History/Index.cshtml
@@ -15,6 +15,7 @@
                 <div class="row">
                     <div class="col-lg-4">
                         <i class="fas fa-table"></i>
+                        <b id="total"></b>
                     </div>
                     <div class="col-lg-4">
                         <div class="fa-pull-right">
@@ -94,5 +95,5 @@
 </script>
 
 @section ClientScript{
-    <script src="/Assets/admin/controller/historyController.js"></script>
+    <script src="/Assets/admin/controller/historyController1.js"></script>
 }
