--- a/MobileWorld/Areas/Admin/Views/User/Index.cshtml
+++ b/MobileWorld/Areas/Admin/Views/User/Index.cshtml
@@ -14,6 +14,7 @@
                 <div class="row">
                     <div class="col-md-4">
                         <i class="fas fa-table"></i>
+                        <b id="total"></b>
                     </div>
                     <div class="col-md-4">
                         <div class="fa-pull-right">
@@ -141,5 +142,5 @@
 
 @section ClientScript
 {
-    <script src="~/Assets/admin/controller/userController.js"></script>
+    <script src="~/Assets/admin/controller/userController1.js"></script>
 }
