--- a/MobileWorld/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/MobileWorld/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -13,6 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
+    <link href="~/Assets/web/img/mobileworld.png" rel="icon">
 
     <title>@ViewData["Title"]</title>
 
