--- a/MobileWorld/Views/Shared/_Layout.cshtml
+++ b/MobileWorld/Views/Shared/_Layout.cshtml
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mobile World</title>
+    <link href="~/Assets/web/img/mobileworld.png" rel="icon">
 
     <link href="/Assets/admin/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <!-- Bootstrap -->
@@ -20,6 +21,7 @@
     <link rel="stylesheet" href="/Assets/web/css/responsive.css">
     <link href="/Assets/web/css/detail.css" rel="stylesheet" />
     <link href="/Assets/web/css/filter.css" rel="stylesheet" />
+    @*<link href="/Assets/web/css/mestyle.css" rel="stylesheet" />*@
 
 </head>
 <body>
