--- a/MobileWorld/Areas/Admin/Views/Statistical/Customer.cshtml
+++ b/MobileWorld/Areas/Admin/Views/Statistical/Customer.cshtml
@@ -1,8 +1,94 @@
 ﻿
 @{
-    ViewBag.Title = "Customer";
+    ViewBag.Title = "Thống kê";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Customer</h2>
+@section header{
+    Doanh thu.
+}
+
+<div class="row">
+    <div class="col-lg-12">
+        <div class="card mb-3">
+            <div class="card-header">
+                <div class="row">
+                    <div class="col-lg-4">
+                        <i class="fas fa-table"></i>
+                        <b id="totalMoney"></b>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="fa-pull-right">
+                            <input type="text" class="form-control" id="txtSeach" name="" placeholder="Nhập tên sản phẩm" />
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="row">
+                            <div class="ml-1">
+                                <select id="slBrand" class="form-control">
+                                    <option value="0">Hãng</option>
+                                </select>
+                            </div>
+                            <div class="ml-1">
+                                <select id="slMonth" class="form-control">
+                                    <option value="0">Tháng</option>
+                                    <option value="1">Tháng 1</option>
+                                    <option value="2">Tháng 2</option>
+                                    <option value="3">Tháng 3</option>
+                                    <option value="4">Tháng 4</option>
+                                    <option value="5">Tháng 5</option>
+                                    <option value="6">Tháng 6</option>
+                                    <option value="7">Tháng 7</option>
+                                    <option value="8">Tháng 8</option>
+                                    <option value="9">Tháng 9</option>
+                                    <option value="10">Tháng 10</option>
+                                    <option value="11">Tháng 11</option>
+                                    <option value="12">Tháng 12</option>
+                                </select>
+                            </div>
+                            <div class="ml-1">
+                                <button id="btnSeach" class="btn btn-info"><i class="fas fa-search"></i></button>
+                                <button id="btnReset" class="btn btn-secondary"><i class="fas fa-redo"></i></button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card-body">
+                <div class="table-responsive">
+                    <table class="table table-bordered table-hover" width="100%" cellspacing="0">
+                        <thead>
+                            <tr>
+                                <th>Id</th>
+                                <th>Tài khoản</th>
+                                <th>Họ tên</th>
+                                <th>Email</th>
+                                <th>Số lượng</th>
+                                <th>Doanh thu</th>
+                            </tr>
+                        </thead>
+                        <tbody id="tblData"></tbody>
+                    </table>
+                    <div id="pagination" class="pagination">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script id="data-template" type="x-tmpl-mustache">
+    <tr>
+        <td>{{id}}</td>
+        <td>{{name}}</td>
+        <td>{{brand}}</td>
+        <td>{{unit}}</td>
+        <td>{{quantity}}</td>
+        <td>{{cost}} VNĐ</td>
+    </tr>
+</script>
+
+@section ClientScript{
+    <script src="/Assets/admin/controller/statisticalController.js"></script>
+}
 
