--- a/MobileWorld/Views/Login/Index.cshtml
+++ b/MobileWorld/Views/Login/Index.cshtml
@@ -8,9 +8,9 @@
     <h2>Đăng nhập</h2>
     <form id="formData">
         <p>Tài khoản</p>
-        <input id="txtUsername" type="text" name="username" placeholder="Nhập tài khoản">
+        <input id="txtUsername" type="text" value="tuandz" name="username" placeholder="Nhập tài khoản">
         <p>Mật khẩu</p>
-        <input id="txtPassword" type="password" name="password" placeholder="Nhập mật khẩu">
+        <input id="txtPassword" type="password" value="tuandz" name="password" placeholder="Nhập mật khẩu">
     </form>
     <button id="btnSign" class="btn btn-primary btn-block">Đăng nhập</button>
     <a href="/Login/LoginFacebook" style="color: white;" id="btnSignFb" class="btn btn-primary btn-block"><i class="fab fa-facebook-f"></i> Đăng nhập với Facebook</a>
