sửa lại button fb

--- a/MobileWorld/Views/Login/Index.cshtml
+++ b/MobileWorld/Views/Login/Index.cshtml
@@ -13,7 +13,7 @@
         <input id="txtPassword" type="password" value="tuandz" name="password" placeholder="Nhập mật khẩu">
     </form>
     <button id="btnSign" class="btn btn-primary btn-block">Đăng nhập</button>
-    <a href="/Login/LoginFacebook" style="color: white;" id="btnSignFb" class="btn btn-primary btn-block"><i class="fab fa-facebook-f"></i> Đăng nhập với Facebook</a>
+    <a href="/Login/LoginFacebook" style="color: white; border-radius: 20px; height: 40px; line-height: 30px;" id="btnSignFb" class="btn btn-primary btn-block"><i class="fab fa-facebook-f"></i> Đăng nhập với Facebook</a>
     <p style="margin-top: 5px">Chưa có? <a href="/Login/Register">Đăng kí</a></p>
     <p><a href="/Login/Forgot">Quên mật khẩu?</a></p>
 </div>
